--- a/.env
+++ b/.env
@@ -38,6 +38,12 @@ REDIS_DB=0
 # 日志配置
 LOG_LEVEL=INFO
 
+# 操作日志配置
+DEFAULT_OPERATOR_ID=system_auto
+DEFAULT_OPERATOR_TYPE=system
+ENABLE_OPERATION_LOG=true
+OPERATION_LOG_RETENTION_DAYS=90
+
 # 限流配置
 RATE_LIMIT_ENABLED=true
 RATE_LIMIT_WINDOW=60
