增加欢迎页api

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # 应用配置
-APP_NAME=后台管理模板
+APP_NAME=网络设备自动化管理系统
 APP_VERSION=0.1.0
-APP_DESCRIPTION=基于FastAPI的后台管理模板
+APP_DESCRIPTION=基于FastAPI的网络设备自动化管理系统
 API_PREFIX=/api
 DEBUG=true
 
