--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ license = "MIT"
 authors = [{ name = "lijianqiao", email = "lijianqiao2906@live.com" }]
 dependencies = [
     "aerich>=0.9.1",
+    "aiohttp>=3.12.13",
     "asyncpg>=0.30.0",
     "fastapi[standard]>=0.115.12",
     "fastexcel>=0.14.0",
@@ -65,7 +66,11 @@ url = "https://pypi.tuna.tsinghua.edu.cn/simple"
 default = true
 
 [dependency-groups]
-dev = ["pytest>=8.4.0", "pytest-asyncio>=1.0.0"]
+dev = [
+    "aiohttp>=3.12.13",
+    "pytest>=8.4.0",
+ "pytest-asyncio>=1.0.0",
+]
 
 [tool.aerich]
 tortoise_orm = "app.db.connection.TORTOISE_ORM"
