完成第三阶段网络自动化开发

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,15 +14,19 @@ dependencies = [
     "aerich>=0.9.1",
     "aiohttp>=3.12.13",
     "asyncpg>=0.30.0",
+    "asyncssh>=2.21.0",
     "cryptography>=45.0.4",
     "fastapi[standard]>=0.115.12",
     "fastexcel>=0.14.0",
+    "jinja2>=3.1.6",
     "loguru>=0.7.3",
+    "nornir>=3.5.0",
     "openpyxl>=3.1.5",
     "polars>=1.31.0",
     "pydantic-settings>=2.9.1",
     "python-multipart>=0.0.20",
     "redis[hiredis]>=6.2.0",
+    "scrapli[asyncssh,community,paramiko]>=2025.1.30",
     "tortoise-orm>=0.25.1",
     "uvicorn[standard]>=0.34.3",
     "xlsxwriter>=3.2.5",
