优化nornir库存配置，优化自动化调度模块核心功能

--- a/.env
+++ b/.env
@@ -20,6 +20,12 @@ SECRET_KEY=k37PRUFUEQg9ZGeOpkV8jR0U7mnTKeUPTaY4/NBepOM=
 ACCESS_TOKEN_EXPIRE_MINUTES=10080
 ALGORITHM=HS256
 
+# 加密配置
+# 注意：此密钥应当是随机生成的，且保密
+# 这里使用的是一个示例密钥，请根据实际情况修改
+# 可以使用openssl rand -base64 32命令生成一个新的密钥
+ENCRYPTION_KEY=cS0wOW1rbV84YUl0bUQ1YTAzWVR6aTNXNG40LTZUQUYwRjVNX04zODB1cz0=
+
 # 数据库配置
 DB_HOST=localhost
 DB_PORT=5432
