--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ SECRET_KEY=<your_secret_key>
 ACCESS_TOKEN_EXPIRE_MINUTES=10080
 ALGORITHM=HS256
 
+# 加密配置
+# 注意：此密钥应当是随机生成的，且保密
+# 这里使用的是一个示例密钥，请根据实际情况修改
+# 可以使用openssl rand -base64 32命令生成一个新的密钥
+ENCRYPTION_KEY=<your_encryption_key>
+
 # 数据库配置
 DB_HOST=<your_db_host>
 DB_PORT=<your_db_port>
