增加解析输出的结构化输出，提供源输出和结构化json输出

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "redis[hiredis]>=6.2.0",
     "scrapli[asyncssh,community,paramiko]>=2025.1.30",
     "tortoise-orm>=0.25.1",
+    "ttp>=0.9.5",
+    "ttp-templates>=0.3.7",
     "uvicorn[standard]>=0.34.3",
     "xlsxwriter>=3.2.5",
 ]
