更改结构化输出，从ttp更改为textfsm、ntc-templates

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,10 @@ python-multipart
 nornir
 scrapli[asyncssh]
 scrapli[paramiko]
+scrapli-community
 jinja2
-ttp
+textfsm
+ntc-templates
 
 # test
 aiohttp
