--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,15 +21,16 @@ dependencies = [
     "jinja2>=3.1.6",
     "loguru>=0.7.3",
     "nornir>=3.5.0",
+    "ntc-templates>=7.9.0",
     "openpyxl>=3.1.5",
     "polars>=1.31.0",
     "pydantic-settings>=2.9.1",
     "python-multipart>=0.0.20",
     "redis[hiredis]>=6.2.0",
+    "scrapli-community>=2025.1.30",
     "scrapli[asyncssh,community,paramiko]>=2025.1.30",
+    "textfsm>=1.1.3",
     "tortoise-orm>=0.25.1",
-    "ttp>=0.9.5",
-    "ttp-templates>=0.3.7",
     "uvicorn[standard]>=0.34.3",
     "xlsxwriter>=3.2.5",
 ]
