--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,7 @@ dependencies = [
     "pydantic-settings>=2.9.1",
     "python-multipart>=0.0.20",
     "redis[hiredis]>=6.2.0",
-    "scrapli-community>=2025.1.30",
-    "scrapli[asyncssh,community,paramiko]>=2025.1.30",
+    "scrapli[asyncssh,community,paramiko]>=2025.1.30",  # 合并 scrapli-community
     "textfsm>=1.1.3",
     "tortoise-orm>=0.25.1",
     "uvicorn[standard]>=0.34.3",
@@ -38,26 +37,20 @@ dependencies = [
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
 
+[tool.hatch.envs.dev]
+dependencies = [
+    "pytest>=8.4.0",
+    "pytest-asyncio>=1.0.0",
+]
+
 [tool.ruff]
 line-length = 120
 target-version = "py313"
 exclude = [".git", "__pycache__", ".venv", ".vscode"]
 
 [tool.ruff.lint]
-select = [
-    "E",  # pycodestyle 错误
-    "W",  # PycodeStyle 警告
-    "F",  # Pyflakes
-    "I",  # isort
-    "B",  # flake8-bugbear
-    "C4", # flake8 推导式
-    "UP", # pyupgrade
-]
-ignore = [
-    "E501", # 行太长，由 black 处理
-    "B008", # 不在参数默认值中执行函数调用
-    "W191", # 缩进包含制表符
-]
+select = ["E", "W", "F", "I", "B", "C4", "UP"]
+ignore = ["E501", "B008", "W191"]
 
 [tool.ruff.format]
 quote-style = "double"
@@ -68,19 +61,7 @@ line-ending = "auto"
 [tool.ruff.lint.isort]
 known-first-party = ["app"]
 
-# 项目级将 uv 下载源换成国内源 - 清华大学
-[[tool.uv.index]]
-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
-default = true
-
-[dependency-groups]
-dev = [
-    "aiohttp>=3.12.13",
-    "pytest>=8.4.0",
- "pytest-asyncio>=1.0.0",
-]
-
 [tool.aerich]
 tortoise_orm = "app.db.connection.TORTOISE_ORM"
 location = "./migrations"
-src_folder = "." 
+src_folder = "."
